--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -70,6 +70,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="Tank.cs" />
+    <Compile Include="Data\Ground.cs" />
+    <Compile Include="Data\FieldObject.cs" />
+    <Compile Include="Data\Coin.cs" />
+    <Compile Include="Data\Water.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Properties\New Folder\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
 </Project>
