Initial server messege parsing done

--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -50,6 +50,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Map.cs" />
+    <Compile Include="Objects\Brick.cs" />
+    <Compile Include="Objects\MapObject.cs" />
+    <Compile Include="Objects\Player.cs" />
+    <Compile Include="Objects\Stone.cs" />
+    <Compile Include="Objects\Water.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
